wso2-kyverno-helm/kyverno/policies/require-security-context.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy

metadata:
  name: require-security-context

spec:
  validationFailureAction: Enforce
  background: true

  rules:

  - name: validate-security-context

    match:
      any:
      - resources:
          kinds:
          - Pod

    validate:

      message: "Les conteneurs doivent avoir un securityContext sécurisé."

      foreach:

      - list: "request.object.spec.containers"

        pattern:

          securityContext:

            allowPrivilegeEscalation: false

            capabilities:

              drop:
              - ALL
